force-app/main/default/objects/Product_Relationship__c/Product_Relationship__c.object-meta.xml
<CustomObject>
    <description>Allows us to create relationships between products to define things such as suggested upsells or required add-ons.</description>
    <label>Product Relationship</label>
    <nameField>
        <displayFormat>PRN-{000000}</displayFormat>
        <label>Product Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>