force-app/main/default/objects/Product_Relationship__c/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary product in this relationship.</description>
    <label>Primary Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>Related_Products</relationshipName>
    <type>Lookup</type>
</CustomField>