force-app/main/default/objects/Product_Relationship__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The secondary product in this relationship</description>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent Products</relationshipLabel>
    <relationshipName>Parent_Products</relationshipName>
    <type>Lookup</type>
</CustomField>